<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- first layout began-->

    <RelativeLayout

        android:id="@+id/layone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#11F6FAF6">


    <RelativeLayout
        android:id="@+id/laytwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="#11F6FAF6">


        <ImageView
            android:id="@+id/one"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="50dp"
            android:adjustViewBounds="true"
            android:background="#11F6FAF6"
            android:padding="3dp"
            android:scaleType="centerInside"
            android:src="@drawable/bus"></ImageView>

    </RelativeLayout>
    </RelativeLayout>

    <!-- second layout began-->

    <LinearLayout
        android:id="@+id/laythree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layone"
        android:orientation="horizontal">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/folloerbg"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/tone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/one"
                    android:textSize="20sp"
                    android:fontFamily="sans-serif-light">

                </TextView>

            </LinearLayout>

        </RelativeLayout>

        <!-- third layout began-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/folloerbg"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/tthree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/three"
                    android:textSize="20sp"
                    android:fontFamily="sans-serif-light">

                </TextView>

            </LinearLayout>

        </RelativeLayout>


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layfour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/laythree">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginLeft="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/five"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Facilites"
                    android:textSize="30sp"
                    android:textColor="#000000"
                    android:fontFamily="sans-serif-light"
                    >

                </TextView>
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>



    <LinearLayout
    android:id="@+id/layfive"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:layout_below="@+id/layfour"
    android:orientation="horizontal">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/folloerbg"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingTop="20dp"
        android:paddingBottom="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/tsix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/six"
                android:textSize="20sp"
                android:fontFamily="sans-serif-light">

            </TextView>


        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/folloerbg"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingTop="20dp"
        android:paddingBottom="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/teight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eight"
                android:textSize="20sp"
                android:fontFamily="sans-serif-light">

            </TextView>


        </LinearLayout>

    </RelativeLayout>


</LinearLayout>

    <RelativeLayout
        android:id="@+id/laysix"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layfive">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tten"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ten"
                    android:textSize="20sp"
                    android:textColor="#000000"
                    android:fontFamily="sans-serif-light"
                    >

                </TextView>
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/layseven"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/laysix">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginLeft="20dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/televen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Rs. 773.15/Person"
                    android:textSize="30sp"
                    android:textColor="#000000"
                    android:fontFamily="sans-serif-light"
                    >

                </TextView>
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layseven">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="View"
                    android:textSize="30sp">"

                </Button>


            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>